# bevy-tilemap-editor-pls

./: Cargo.toml  LICENSE  README.MD
.github/workflows/: ci.yml
examples/: basic.rs  custom_components.rs  empty.rs  two_maps.rs
src/: coord_utils.rs  error.rs  lib.rs  queries.rs  tile_data.rs
src/state/: mod.rs
src/state/editing_tilemap/: mod.rs  palette.rs  queries.rs
src/state/editing_tilemap/tools/: mod.rs  tile_eraser.rs  tile_painter.rs  tile_picker.rs  tile_whois.rs
src/state/painting_tilemap/: mod.rs  palette.rs  queries.rs
src/state/painting_tilemap/tools/: tile_eraser.rs  tile_picker.rs  tile_whois.rs
src/state/picking_tilemap/: mod.rs
