[package]
name = "bevy-tilemap-editor-pls"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.14"
bevy_editor_pls = "0.4"
bevy-inspector-egui = "0.18.0"
bevy_ecs_tilemap = "0.10.0"
bevy_egui = "0.20"
thiserror = "1"